--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 python-dotenv==1.0.0
 requests==2.31.0
 pytest==7.4.3
+gunicorn==21.2.0
 
 
 
